[#497] Fixes for Affiliations UI on small screens
**Notes**: Original changes made by @jarekzet,
rebase and git magic @michal-szostak

Fixes: #497

--- a/app/javascript/stylesheets/_bootstrap-customizations.scss
+++ b/app/javascript/stylesheets/_bootstrap-customizations.scss
@@ -361,6 +361,21 @@ textarea:-ms-input-placeholder { /* IE 10+ */
   }
 }
 
+@media (max-width: 768px) {
+
+  .accordion .card-header h6 {
+    padding-left: 0;
+    min-height: 20px;
+    font-size: 13px;
+    background: none !important;
+  }
+
+  .accordion .card-header h6 .display-2 {
+    min-height: 26px;
+    font-size: 16px;
+  }
+}
+
 .body-color {
   color: $body-color;
 }
